--- a/public/css/cardlist.css
+++ b/public/css/cardlist.css
@@ -46,6 +46,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 24px;
     flex-wrap: wrap;
 }
 
